Fix Codemirror overlaying in fullscreen by increasing the z-index

--- a/src/app/components/graph-view/graph-view.component.scss
+++ b/src/app/components/graph-view/graph-view.component.scss
@@ -39,7 +39,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 2;
+  z-index: 7;
 }
 
 .cell.main {
